--- a/styles.css
+++ b/styles.css
@@ -77,13 +77,138 @@ body{
 
 section{
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
+}
+
+#home{
+	display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+}
+
+#about{
+	display: flex;
+    align-items: center;
 }
 
 #services{
 	background: #80808040;
+	display: flex;
+    align-items: center;
 }
 
 #contact{
 	background: #80808040;
 }
+
+section > p{
+    margin-left: 10vw;
+    margin-right: 5vw;
+    font-size: 35px;
+}
+
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  color: #212529;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.btn:hover, .btn:focus {
+  text-decoration: none;
+}
+.btn:focus, .btn.focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+.btn.disabled, .btn:disabled {
+  opacity: 0.65;
+}
+.btn:not(:disabled):not(.disabled) {
+  cursor: pointer;
+}
+a.btn.disabled,
+fieldset:disabled a.btn {
+  pointer-events: none;
+}
+.btn-primary {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+.btn-primary:hover {
+  color: #fff;
+  background-color: #0056b3;
+  border-color: #004085;
+}
+.btn-primary:focus, .btn-primary.focus {
+  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+}
+.btn-primary.disabled, .btn-primary:disabled {
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
+.show > .btn-primary.dropdown-toggle {
+  color: #fff;
+  background-color: #004085;
+  border-color: #003768;
+}
+.btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus {
+  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+}
+
+
+footer{
+	height: 10vh;
+	background: black;
+	color: gray;
+	display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-direction: column;
+}
+
+#copy{
+	font-size: 12px;
+}
+
+	/* ----- RESPONSIVENESS START ----- */
+	@media only screen and (min-width:300px) {
+	/* For mobile: */
+		.more{
+	        width: fit-content;
+	        margin-left: auto;
+	        margin-right: 15vw;
+	        margin-bottom: 25vw;
+	        border-radius: 15px;
+	        padding-left: 20px;
+	        padding-right: 20px;
+		}
+	}
+	@media only screen and (min-width: 768px) {
+	/* For desktop: */
+		.more{
+	        width: fit-content;
+	        margin-left: 10vw;
+	        margin-right: auto;
+	        margin-bottom: 15vh;
+	        border-radius: 15px;
+	        padding-left: 20px;
+	        padding-right: 20px;
+		}
+	}
+	/* ----- RESPONSIVENESS END ----- */
