--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ body{
 	z-index: 4;
 	height: 100vh; width: 100vw;
 	background: #80808040;
+	-webkit-backdrop-filter: blur(10px);
 	backdrop-filter: blur(10px);
 	border-radius: 50px;
 	transition: 400ms;
