contents added test.html

--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,13 @@ footer{
 	        padding-left: 20px;
 	        padding-right: 20px;
 		}
+		.contact-card{
+			background: gray;
+			box-shadow: inset 0px 0px 0px 5px;
+			padding: 25px;
+			width: 100%;
+			min-height: 300px;
+		}
 	}
 	@media only screen and (min-width: 768px) {
 	/* For desktop: */
@@ -209,6 +216,13 @@ footer{
 	        border-radius: 15px;
 	        padding-left: 20px;
 	        padding-right: 20px;
+		}
+		.contact-card{
+			background: gray;
+			box-shadow: inset 0px 0px 0px 5px;
+			padding: 25px;
+			width: 50%;
+			min-height: 300px;
 		}
 	}
 	/* ----- RESPONSIVENESS END ----- */
