--- a/chat/styles/styles.css
+++ b/chat/styles/styles.css
@@ -9,6 +9,7 @@
     transition: 500ms;
 }
 .login-card{
+	height: 282px;
 	z-index: 2;
 	position: absolute;
 	transition: 500ms;
@@ -22,6 +23,7 @@
 }
 .signup-card{
 	transform: rotateY(180deg);
+	height: 377px;
 	z-index: 1;
 	position: absolute;
 	transition: 500ms;
@@ -35,6 +37,13 @@
 }
 .mdc-button--outlined{
 	border-color: #6200ee !important;
+}
+.mdc-text-field{
+	background-color: transparent !important;
+}
+.mdc-text-field-helper-text{
+	color: red !important;
+	transition: 300ms;
 }
 .login-display-visible, .signup-display-visible{
 	transition: 300ms;
@@ -60,10 +69,14 @@
 		display: flex;
 		height: 100vh;
 		width: 50vw;
-		font-size: 40vh;
+		font-size: 25vh;
         justify-content: center;
         align-items: center;
         color: #6200ee;
+        transition: 750ms;
+        opacity: 0;
+        transform: scale(50%);
+        transform-origin: 75% 75%;
 	}
 	.login-right-div{
         width: 50vw;
@@ -72,4 +85,142 @@
         justify-content: center;
         align-items: center;
 	}
+}
+
+
+
+
+@keyframes mdc-linear-progress-buffering { to { -webkit-transform: translateX(-10px); transform: translateX(-10px); } }
+@keyframes mdc-linear-progress-primary-indeterminate-translate {
+  0% { 									-webkit-transform: translateX(0); transform: translateX(0); }
+  20% { 		   	   -webkit-animation-timing-function: cubic-bezier(0.5, 0, 0.701732, 0.495819);
+            			   	   animation-timing-function: cubic-bezier(0.5, 0, 0.701732, 0.495819);
+    									-webkit-transform: translateX(0); transform: translateX(0); }
+  59.15% { 	   -webkit-animation-timing-function: cubic-bezier(0.302435, 0.381352, 0.55, 0.956352);
+            	   	   animation-timing-function: cubic-bezier(0.302435, 0.381352, 0.55, 0.956352);
+    					-webkit-transform: translateX(83.67142%); transform: translateX(83.67142%); }
+  100% { 			-webkit-transform: translateX(200.611057%); transform: translateX(200.611057%); } }
+@keyframes mdc-linear-progress-primary-indeterminate-scale {
+  0% { 									  -webkit-transform: scaleX(0.08); transform: scaleX(0.08); }
+  36.65% { 		   -webkit-animation-timing-function: cubic-bezier(0.334731, 0.12482, 0.785844, 1);
+            	   		   animation-timing-function: cubic-bezier(0.334731, 0.12482, 0.785844, 1);
+    							  		  -webkit-transform: scaleX(0.08); transform: scaleX(0.08); }
+  69.15% { 			   		   -webkit-animation-timing-function: cubic-bezier(0.06, 0.11, 0.6, 1);
+            				   		   animation-timing-function: cubic-bezier(0.06, 0.11, 0.6, 1);
+    					  		  -webkit-transform: scaleX(0.661479); transform: scaleX(0.661479); }
+  100% { 					      		  -webkit-transform: scaleX(0.08); transform: scaleX(0.08); } }
+@keyframes mdc-linear-progress-secondary-indeterminate-translate {
+  0% { 		 		  -webkit-animation-timing-function: cubic-bezier(0.15, 0, 0.515058, 0.409685);
+            		 		  animation-timing-function: cubic-bezier(0.15, 0, 0.515058, 0.409685);
+    						   			-webkit-transform: translateX(0); transform: translateX(0); }
+  25% { 		 -webkit-animation-timing-function: cubic-bezier(0.31033, 0.284058, 0.8, 0.733712);
+            			 animation-timing-function: cubic-bezier(0.31033, 0.284058, 0.8, 0.733712);
+    		 		  -webkit-transform: translateX(37.651913%); transform: translateX(37.651913%); }
+  48.35% {			 -webkit-animation-timing-function: cubic-bezier(0.4, 0.627035, 0.6, 0.902026);
+            				 animation-timing-function: cubic-bezier(0.4, 0.627035, 0.6, 0.902026);
+    		 		  -webkit-transform: translateX(84.386165%); transform: translateX(84.386165%); }
+  100% {    		 -webkit-transform: translateX(160.277782%);transform: translateX(160.277782%); } }
+@keyframes mdc-linear-progress-secondary-indeterminate-scale {
+  0% { 		-webkit-animation-timing-function: cubic-bezier(0.205028, 0.057051, 0.57661, 0.453971);
+            		animation-timing-function: cubic-bezier(0.205028, 0.057051, 0.57661, 0.453971);
+    									  -webkit-transform: scaleX(0.08); transform: scaleX(0.08); }
+  19.15% { -webkit-animation-timing-function: cubic-bezier(0.152313, 0.196432, 0.648374, 1.004315);
+            	   animation-timing-function: cubic-bezier(0.152313, 0.196432, 0.648374, 1.004315);
+    							  -webkit-transform: scaleX(0.457104); transform: scaleX(0.457104); }
+  44.15% { -webkit-animation-timing-function: cubic-bezier(0.257759, -0.003163, 0.211762, 1.38179);
+            	   animation-timing-function: cubic-bezier(0.257759, -0.003163, 0.211762, 1.38179);
+    								-webkit-transform: scaleX(0.72796); transform: scaleX(0.72796);}
+  100% { 								  -webkit-transform: scaleX(0.08); transform: scaleX(0.08); } }
+
+.mdc-linear-progress{
+	top: 0px;
+	left: 0px;
+	transition: all 500ms ease 0s;
+    position: fixed;
+    width: 100%;
+    height: 4px;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    outline: 1px solid transparent;
+    overflow: hidden;
+}
+
+.mdc-linear-progress__buffer{
+	background-color: #e6e6e6;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-transform-origin: top left;
+    -ms-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-transition: -webkit-transform .25s cubic-bezier(.4,0,.6,1) 0ms;
+    transition: -webkit-transform .25s cubic-bezier(.4,0,.6,1) 0ms;
+    -o-transition: transform .25s 0ms cubic-bezier(.4, 0, .6, 1);
+    transition: transform .25s cubic-bezier(.4,0,.6,1) 0ms;
+    transition: transform .25s cubic-bezier(.4,0,.6,1) 0ms, -webkit-transform .25s cubic-bezier(.4,0,.6,1) 0ms;
+}
+
+.mdc-linear-progress--indeterminate .mdc-linear-progress__primary-bar {
+    left: -145.166611%;
+    -webkit-animation: mdc-linear-progress-primary-indeterminate-translate 2s infinite linear;
+    animation: mdc-linear-progress-primary-indeterminate-translate 2s infinite linear;
+}
+.mdc-linear-progress--indeterminate .mdc-linear-progress__bar {
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+}
+.mdc-linear-progress__primary-bar {
+    -webkit-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    transform: scaleX(0);
+}
+
+.mdc-linear-progress--indeterminate .mdc-linear-progress__primary-bar>.mdc-linear-progress__bar-inner {
+    -webkit-animation: mdc-linear-progress-primary-indeterminate-scale 2s infinite linear;
+    animation: mdc-linear-progress-primary-indeterminate-scale 2s infinite linear;
+}
+
+.mdc-linear-progress--indeterminate .mdc-linear-progress__secondary-bar {
+    left: -54.888891%;
+    visibility: visible;
+    -webkit-animation: mdc-linear-progress-secondary-indeterminate-translate 2s infinite linear;
+    animation: mdc-linear-progress-secondary-indeterminate-translate 2s infinite linear;
+}
+.mdc-linear-progress--indeterminate .mdc-linear-progress__bar {
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+}
+.mdc-linear-progress__secondary-bar {
+    visibility: hidden;
+}
+
+.mdc-linear-progress__bar {
+    height: 100%;
+    -webkit-transform-origin: top left;
+    -ms-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-transition: -webkit-transform .25s cubic-bezier(.4,0,.6,1) 0ms;
+    transition: -webkit-transform .25s cubic-bezier(.4,0,.6,1) 0ms;
+    -o-transition: transform .25s 0ms cubic-bezier(.4, 0, .6, 1);
+    transition: transform .25s cubic-bezier(.4,0,.6,1) 0ms;
+    transition: transform .25s cubic-bezier(.4,0,.6,1) 0ms, -webkit-transform .25s cubic-bezier(.4,0,.6,1) 0ms;
+}
+.mdc-linear-progress--indeterminate .mdc-linear-progress__secondary-bar>.mdc-linear-progress__bar-inner {
+    -webkit-animation: mdc-linear-progress-secondary-indeterminate-scale 2s infinite linear;
+    animation: mdc-linear-progress-secondary-indeterminate-scale 2s infinite linear;
+}
+.mdc-linear-progress__bar, .mdc-linear-progress__bar-inner {
+    position: absolute;
+    width: 100%;
+    -webkit-animation: none;
+    animation: none;
+}
+
+.mdc-linear-progress__bar-inner {
+    border-color: #6200ee !important;
+    border-color: var(--mdc-theme-primary, #6200ee) !important;
+    display: inline-block;
+    border-top: 4px solid;
 }
