--- a/styles/chat-window.css
+++ b/styles/chat-window.css
@@ -1,6 +1,9 @@
 body{
+	/*display: none;*/
 	margin: 0px;
 	transition: 300ms;
+	user-select: none;
+	margin-left: 100vw;
 }
 
 .mdc-top-app-bar{
@@ -43,28 +46,30 @@ body{
 	transition: 300ms;
 }
 
-.in-msg{
-    width: 75vw;
+.msg{
+	width: 75vw;
     word-break: break-all;
-    border-radius: 0px 20px 20px 20px;
+	transition: 300ms;
     box-shadow: 0px 0px 10px -2.4px #00000040;
-    background: #6400f0a6;
     font-family: Roboto;
-    color: white;
     padding: 10px;
+    transform: scale(0);
+}
+
+.in-msg{
+    border-radius: 0px 20px 20px 20px;
+    background: #6400f0a6;
+    color: white;
     margin: 6px;
+    transform-origin: top left;
 }
 
 .out-msg{
-	width: 75vw;
-    word-break: break-all;
     border-radius: 20px 20px 0px 20px;
-    box-shadow: 0px 0px 10px -2.4px #00000040;
     background: lightgray;
-    font-family: Roboto;
     margin-left: auto;
     margin-top: 6px;
     margin-bottom: 6px;
     margin-right: 6px;
-    padding: 10px;
+    transform-origin: bottom right;
 }
