--- a/styles/chat-index.css
+++ b/styles/chat-index.css
@@ -21,6 +21,11 @@ body{
 	box-shadow: 0px 0px 10px 0.5px #00000040;
 }
 
+.mdc-tab-bar{
+	position: fixed;
+	bottom: 0px;
+}
+
 .mdc-tab-scroller__scroll-content{
 	display: flex;
 	box-shadow: 0px 0px 10px 0.5px #00000080;
@@ -31,7 +36,7 @@ body{
 }
 
 .mdc-tab{
-	width: 25%;
+	width: 33.33%;
 }
 
 #layout{
@@ -64,9 +69,39 @@ body{
 	height: 200px;
 }
 
+.mdc-deprecated-list-item__graphic{
+	font-size: 45px;
+	color: lightgray;
+}
+
 .account_circle{
     font-size: 100px;
     color: lightgrey;
+}
+
+.search_bar{
+	width: -webkit-fill-available;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+}
+
+.search_icon{
+    left: auto;
+    right: 16px;
+    position: inherit;
+}
+
+.demo-text-field-outlined-shaped .mdc-notched-outline .mdc-notched-outline__trailing {
+    border-radius: 0 28px 28px 0;
+}
+
+.demo-text-field-outlined-shaped .mdc-notched-outline .mdc-notched-outline__leading {
+    border-radius: 28px 0 0 28px;
+    width: 28px;
+}
+
+.all-peoples{
+	padding-left: 16px;
 }
 
 #text{
