--- a/styles/index.css
+++ b/styles/index.css
@@ -26,23 +26,6 @@ body {
     justify-content: space-between;
 }
 
-#menu-btn {
-	z-index: 5;
-	margin-right: 30px;
-	display: inline-block;
-	width: 4em;
-	height: 4em;
-	background: #ffffff40;
-	backdrop-filter: blur(10px);
-	border-radius: 1em;
-	overflow: hidden;
-	transform: translateZ(0);
-	transition: all 0.5s ease;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	position: fixed;
-    right: 10px;
-    top: 10px;
-}
 
 #menu-btn>span {
 	display: block;
@@ -126,35 +109,22 @@ section {
 	min-height: 100vh;
 }
 
-#home {
-	background-image: url(../assets/main-home.jpeg);
-    background-repeat: no-repeat;
-    background-position: 90% 25%;
-    background-size: 30%;
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-}
-
 #about {
 	display: flex;
 	align-items: center;
 }
 
 #services {
-	background: #80808040;
-	display: flex;
-	align-items: center;
+	background-image: url(../assets/blue-shade3.svg);
+    display: flex;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #contact {
-	background: #80808040;
-}
-
-section>p {
-	margin-left: 10vw;
-	margin-right: 5vw;
-	font-size: 35px;
+	background-image: url(../assets/blue-shade2.svg);
+	background-size: cover;
 }
 
 .btn {
@@ -277,8 +247,7 @@ footer {
 
 	/* For mobile: */
 	.logo_1 {
-		width: 100vw;
-		height: 100vh;
+		width: 55vw
 	}
 
 	.logo_2 {
@@ -296,18 +265,63 @@ footer {
 
 	.more {
 		width: fit-content;
-		margin-left: auto;
-		margin-right: 15vw;
-		margin-bottom: 25vw;
-		border-radius: 15px;
-		padding-left: 20px;
-		padding-right: 20px;
+        margin-left: auto;
+        margin-right: 15vw;
+        margin-bottom: 33vw;
+        border-radius: 15px;
+        padding-left: 20px;
+        padding-right: 20px;
 	}
 
 	.card-resp {
 		padding: 25px;
 		width: 100%;
 		min-height: 300px;
+	}
+
+	.description {
+		margin-left: 5vw;
+        margin-right: 5vw;
+        margin-top: 1vh;
+        margin-bottom: auto;
+		font-family: cursive;
+	}
+
+	#home {
+		background-image: url(../assets/main-home.jpeg);
+        background-repeat: no-repeat;
+        background-position: 90% 50%;
+        background-size: 50%;
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
+	}
+
+	#home>p, #services>p {
+		margin-left: 10vw;
+		margin-right: 5vw;
+		font-size: 20px;
+	}
+
+	#services>p {
+		color: #005686;
+	}
+
+	#menu-btn {
+		z-index: 5;
+		display: inline-block;
+		width: 4em;
+		height: 4em;
+		background: #ffffff40;
+		backdrop-filter: blur(10px);
+		border-radius: 1em;
+		overflow: hidden;
+		transform: translateZ(0);
+		transition: all 0.5s ease;
+		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+		position: fixed;
+		right: 10px;
+		top: 10px;
 	}
 }
 
@@ -333,12 +347,52 @@ footer {
 		width: 50%;
 		min-height: 300px;
 	}
+
+	.description {
+		margin-left: 10vw;
+        margin-right: 45vw;
+        margin-bottom: 10%;
+        font-family: cursive;
+        font-size: 25px;
+	}
+
+	#home {
+		background-image: url(../assets/main-home.jpeg);
+		background-repeat: no-repeat;
+		background-position: 90% 25%;
+		background-size: 30%;
+		display: flex;
+		justify-content: flex-end;
+		flex-direction: column;
+	}
+
+	#home>p,#services >p {
+		margin-left: 10vw;
+		margin-right: 5vw;
+		font-size: 35px;
+	}
+
+	#services>p {
+		color: #005686;
+	}
+
+	#menu-btn {
+		z-index: 5;
+		display: inline-block;
+		width: 4em;
+		height: 4em;
+		background: #ffffff40;
+		backdrop-filter: blur(10px);
+		border-radius: 1em;
+		overflow: hidden;
+		transform: translateZ(0);
+		transition: all 0.5s ease;
+		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+		position: fixed;
+		right: 10px;
+		top: 10px;
+	}
 }
 
-.description {
-	margin-left: 23vw;
-    margin-right: 52vw;
-    margin-bottom: 14%;
-}
 
 /* ----- RESPONSIVENESS END ----- */
