--- a/styles/index.css
+++ b/styles/index.css
@@ -222,6 +222,7 @@ fieldset:disabled a.btn {
 	padding-bottom: 5vh;
 	text-align: center;
 	color: #005686;
+	font-weight: bold;
 }
 
 .ul-border>p{
@@ -267,6 +268,22 @@ footer {
 	width: 50px;
 	height: 50px;
 	background-size: contain;
+	display: block;
+}
+
+.links-container-div {
+	padding-top: 50px;
+    padding-bottom: 30px;
+    display: flex;
+    width: 300px;
+    justify-content: space-between;
+}
+
+.listing-link-style {
+	text-decoration: none;
+    font-family: monospace;
+    font-size: 20px;
+    color: #005686;
 }
 
 #copy {
