--- a/styles/index.css
+++ b/styles/index.css
@@ -115,7 +115,7 @@ section {
 }
 
 #services {
-	background-image: url(../assets/blue-shade3.svg);
+	background-image: url(../assets/blue-shade4.svg);
     display: flex;
     align-items: center;
     background-repeat: no-repeat;
@@ -253,6 +253,7 @@ ul{
 	background: white;
 	border-radius: 50px;
 	background-size: contain;
+	flex: none;
 }
 
 footer {
