--- a/styles/index.css
+++ b/styles/index.css
@@ -27,54 +27,57 @@ body {
 }
 
 
-#menu-btn>span {
-	display: block;
-	position: relative;
-	width: 2em;
-	height: 2em;
-	transition: transform 0.5s ease;
-	overflow: hidden;
-	margin: 1em;
+.menu{
+	position: fixed;
+	z-index: 5;
+    top: 10px;
+    right: 10px;
+    width: 64px;
+    height: 64px;
+    background: #ffffff40;
+	backdrop-filter: blur(10px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 10px;
 }
-
-.s1,
-.s2,
-.s3 {
-	display: block;
-	background-color: black;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 2em;
-	height: 2em;
-	transition: all 0.5s ease;
-	border: 1px solid transparent;
+.stick{
+	transition: 300ms;
+	transform-origin: center center;
+	background: #00b2e7;
+    width: 44px;
+    height: 6px;
+    border-radius: 100px;
 }
-
-#menu-btn.menu>span>span {
-	transform: scale(1, 0.2) translate(0, -3em);
+.s1-open{
+	transform: rotate(45deg) translateX(12px) translateY(12px);
 }
-
-#menu-btn.menu>span>span.s2 {
-	transform: scale(1, 0.2) translate(0, 0);
+.s2-open{
+	transform: rotate(45deg) translateX(0px) translateY(0px);
+	opacity: 0;
 }
-
-#menu-btn.menu>span>span.s3 {
-	transform: scale(1, 0.2) translate(0, 3em);
+.s3-open{
+	transform: rotate(-45deg) translateX(12px) translateY(-12px);
 }
-
-#menu-btn.close>span {
-	transform: rotate(45deg);
+.menu-page{
+	transition: 400ms;
+	position: fixed;
+	background: blue;
 }
-
-#menu-btn.close>span>span,
-#menu-btn.plus>span>span {
-	transform: scale(1, 0.2);
+.menu-page-clossed{
+    top: 10px;
+    right: 10px;
+    width: 64px;
+    height: 64px;
+    border-radius: 10px;
 }
-
-#menu-btn.close>span>span.s3,
-#menu-btn.plus>span>span.s3 {
-	transform: scale(0.2, 1);
+.menu-page-opened{
+    top: 0px;
+    right: 0px;
+    width: 100vw;
+    height: 100vh;
+    border-radius: 0px;
 }
 
 #menu-page {
@@ -96,12 +99,38 @@ body {
 	padding-left: 10vw;
 	top: -100vh;
 	left: 100vw;
+	perspective: 500px;
 }
 
 #menu-page>text {
-	transition: 400ms;
-	color: transparent;
 	margin: 15px 0px;
+	padding-left: 5vw;
+	width: 0px;
+	color: #005686;
+	transform: rotateY(50deg);
+	overflow: hidden;
+	white-space: nowrap;
+	border-radius: 50px;
+	transform-origin: left center;
+}
+
+#menu-page>text:hover{
+	transition: 300ms;
+	box-shadow: #00b2e7 0px 0px 0px 4px;
+    transform: rotateY(-15deg) !important;
+}
+
+.i1{
+	transition: 600ms;
+}
+.i2{
+	transition: 900ms;
+}
+.i3{
+	transition: 1200ms;
+}
+.i4{
+	transition: 1400ms;
 }
 
 section {
@@ -356,7 +385,7 @@ footer {
 		color: #005686;
 	}
 
-	#menu-btn {
+/*	#menu-btn {
 		z-index: 5;
 		display: inline-block;
 		width: 4em;
@@ -371,7 +400,7 @@ footer {
 		position: fixed;
 		right: 10px;
 		top: 10px;
-	}
+	}*/
 }
 
 @media only screen and (min-width: 768px) {
@@ -425,7 +454,7 @@ footer {
 		color: #005686;
 	}
 
-	#menu-btn {
+/*	#menu-btn {
 		z-index: 5;
 		display: inline-block;
 		width: 4em;
@@ -440,7 +469,7 @@ footer {
 		position: fixed;
 		right: 10px;
 		top: 10px;
-	}
+	}*/
 }
 
 
