--- a/styles/index.css
+++ b/styles/index.css
@@ -139,7 +139,7 @@ body {
 #menu-page>text {
 	margin: 15px 5vw;
 	width: 0px;
-	color: #005686;
+	color: #00b2e7;
 	transform: rotateY(50deg);
 	overflow: hidden;
 	white-space: nowrap;
@@ -149,7 +149,7 @@ body {
 
 #menu-page>text:hover{
 	transition: 300ms;
-	box-shadow: #00b2e7 0px 0px 0px 4px;
+	box-shadow: 0px 0px 0px 4px #005686;
     transform: rotateY(-15deg) !important;
 }
 
